--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
     <!--Polygon CLipping -->
     <script src="https://cdn.jsdelivr.net/npm/polygon-clipping@0.15.3/dist/polygon-clipping.umd.min.js"></script>
 
-    <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.2.2/mapbox-gl-draw.js"></script>
     <script src="mapbox-gl-draw-rectangle-mode.min.js"></script>
     <link
@@ -31,7 +30,7 @@
       type="text/css"
     />
     
-    <title>React App</title>
+    <title>MapBox-React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
